--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Prerak Raja</a></h1>
+      <h1><a href="index.html">Robin Vishen</a></h1>
       <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -72,9 +72,9 @@
           <li><a href="#education"> <span>Education</span></a></li>
           <li><a href="#experience"> <span>Experience</span></a></li>
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
-          <li><a href="#portfolio"> <span>Projects</span></a></li>
+          <li><a href="#projects"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1EcK3IQOyV5IL15T0P0xnmtcrnlxmWrR4/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -82,9 +82,9 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="https://www.linkedin.com/in/robinvishen" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.github.com/vi7n" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:robinvishen@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
 
@@ -106,21 +106,20 @@
           <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
+          <p>Focused and enthusiastic robotics engineer with a keen interest in machine learning and artificial intelligence. 
             I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 480-401-8112</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 17 September 1997</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 458-272-8657</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Tempe, AZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rajaprerak@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Corvallis, OR</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> robinvishen@gmail.com</li>
               </ul>
             </div>
           </div>
@@ -203,7 +202,7 @@
 
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets/img/education/ASU.jpg" class="img-fluid" alt="">
+              <img src="assets/img/education/OSU.jpg" class="img-fluid" alt="">
               <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Computer Science</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">Janurary 2021 - Present</h5>
