--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Best Decision Ever</title>
+  <title>ROBIN VISHEN</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -63,7 +63,7 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Robin Vishen</a></h1>
+      <h1><a href="index.html">Robin Kr. Singh</a></h1>
       <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic robotics engineer with a keen interest in machine learning and artificial intelligence. 
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
+            I am passionate about quantifying uncertainity and predicting future events based on information we currently have.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -204,27 +204,27 @@
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/OSU.jpg" class="img-fluid" alt="">
               <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Computer Science</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">Janurary 2021 - Present</h5>
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Robotics</em></p>
+              <h5 style="text-align:left;padding: 0px 10px;">September 2022 - Present</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
-                <li>Distributed Database Systems</li>
-                <li>Cloud Computing</li>
-                <li>Foundation Of Algorithms</li>
+                <li>Machine Learning &amp; Data Mining</li>
+                <li>Multiagent Systems</li>
+                <li>Sequential Decision Making</li>
               </ul>
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets/img/education/au.png" class="img-fluid" alt="">
+              <img src="assets/img/education/dtu.png" class="img-fluid" alt="">
               <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.Tech. in Information and Communication Technology</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">July 2014 - May 2018</h5>
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.Tech. in Electronics and Communication Engineering</em></p>
+              <h5 style="text-align:left;padding: 0px 10px;">August 2016 - July 2020</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
                 <!-- <li>Data Structures &amp; Algorithms</li> -->
-                <li>Database Management Systems</li>
+                <li>Operating Systems</li>
                 <!-- <li>Operating Systems</li> -->
-                <li>Algorithms &amp; Optimization for Big Data</li>
-                <li>Machine Learning</li>
+                <li>Microprocessors &amp; Interfacing</li>
+                <li>Control System</li>
                 <!-- <li>Computer Vision</li> -->
               </ul>
             </div>
@@ -696,7 +696,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "AI Enthusiast"],
+      strings: ["Coder", "Robotics Engineer", "Developer", "AI Enthusiast", "Learner"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
