--- a/index.html
+++ b/index.html
@@ -653,9 +653,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.linkedin.com/in/robinvishen" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.github.com/vi7n" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="mailto:robinvishen@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
             </div>
           </div>
@@ -665,15 +665,15 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>rajaprerak@gmail.com</p>
-            <p>pkraja@asu.edu</p>
+            <p>robinvishen@gmail.com</p>
+            <p>singhrob@oregonstate.edu</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Contact</h3>
-            <p>+1 480-401-8112</p>
+            <p>+1 458-272-8657</p>
           </div>
         </div>
       </div>
