--- a/index.html
+++ b/index.html
@@ -642,9 +642,9 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>1275 E University Dr</p>
-            <p>Unit 212</p>
-            <p>Tempe, AZ 85281</p>
+            <p>NW Taylo Ave</p>
+            <!-- <p>Unit 212</p> -->
+            <p>Corvallis, OR 97330</p>
           </div>
         </div>
 
