--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>NW Taylo Ave</p>
+            <p>NW Taylor Ave</p>
             <!-- <p>Unit 212</p> -->
             <p>Corvallis, OR 97330</p>
           </div>
