--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://yatrimotorcycles.com//" style="color:#12d640">Yatri Motorcycles</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://yatrimotorcycles.com/" style="color:#12d640">Yatri Motorcycles</a><br> </h4>
                 <h5 style="text-align:left;">June 2020 - July 2021</h5>
                 <p style="text-align:left;color:#fff"><em>Robotics & Hardware Engineer</em></p>
                 <ul style="text-align:left;">
