--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
                 <h5 style="text-align:left;">December 2022 - Present</h5>
                 <p style="text-align:left;color:#fff"><em>Graduate Research Assistant </em></p>
                 <ul style="text-align:left;">
-                  <!-- <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx 5500 students.</li> -->
-                  <!-- <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.</li> -->
+                  <li>implementing baseline method and recreating the results</li>
+                  <li>coming up with different ideas and implementing them to outperform the baseline and state-of-the art technique</li>
                   <!-- <li>Handled Linux server administration and Apache configuration; automated tasks like user account creation, managing student database, and system maintenance using Shell and automation scripts, reducing manual work by 200%.</li> -->
                 </ul>
               </div>
