--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
 
       <h1><a href="index.html">Robin Kr. Singh</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff">Hum hai  <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -696,7 +696,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Robotics Engineer", "Developer", "AI Enthusiast", "Learner"],
+      strings: ["Programmer", "Robotics Engineer", "Developer", "AI Enthusiast", "Learner"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
