probably fixed the not reloading error

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
 <html lang="en">
-
+  
+  <!DOCTYPE html>
 <head>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -363,15 +363,15 @@
                 <!-- <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4> -->
                 <!-- <h5 style="text-align:left;">May 2018 - June 2018</h5> -->
                 <!-- <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p> -->
+                <li>Optimized s. </li>
                 <ul style="text-align:left;">
-                  <li>Optimized s. </li> -->
                   <li>Devised ting speed by 46%.</li>
                   <li>Built a ve charts in real-time.</li>
                   <!-- <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing pipeline, increasing overall speed by 75%.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <!-- <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4> -->
+                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4> -->
                 <!-- <h5 style="text-align:left;">Jan 2018 - May 2018</h5> -->
                 <!-- <p style="text-align:left;color:#fff"><em>Research Intern</em></p> -->
                 <ul style="text-align:left;">
@@ -384,7 +384,7 @@
     </div>
   </section>
 
-  <!-- End Experience Section -->
+  End Experience Section -->
 
 
 
