probably fixed the not reloading error

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <!-- <h5 style="text-align:left;">Jan 2018 - May 2018</h5> -->
                 <!-- <p style="text-align:left;color:#fff"><em>Research Intern</em></p> -->
                 <ul style="text-align:left;">
-                  <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li> -->
+                  <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li>
                   <!-- <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
                 </ul>
             </div>
@@ -384,7 +384,7 @@
     </div>
   </section>
 
-  End Experience Section -->
+  <! -- End Experience Section -->
 
 
 
@@ -526,7 +526,7 @@
         
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <!-- <br> -->
+          <br>
           <center><h4>Image Generator</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/gan.jpg" class="img-fluid" alt="">
