trying to fix the page load

--- a/index.html
+++ b/index.html
@@ -42,14 +42,6 @@
     gtag('config', 'UA-169007209-3');
   </script>
 
-
-
-  <!-- =======================================================
-  * Template Name: Personal - v2.1.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -203,7 +195,7 @@
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/OSU.png" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
+              <h4 style="text-align:left;"><a href="https://oregonstate.edu/" target="_blank" style="color:#12d640">Oregon State University</a><br> </h4>
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Robotics</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">September 2022 - Present</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
@@ -215,7 +207,7 @@
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/dtu.png" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
+              <h4 style="text-align:left;"><a href="https://dtu.ac.in/" target="_blank" style="color:#12d640">Delhi Technological University</a><br> </h4>
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.Tech. in Electronics and Communication Engineering</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">August 2016 - July 2020</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
