trying to fix the page load

--- a/index.html
+++ b/index.html
@@ -207,14 +207,13 @@
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/dtu.png" class="img-fluid" alt="">
-              <h4 style="text-align:left;"><a href="https://dtu.ac.in/" target="_blank" style="color:#12d640">Delhi Technological University</a><br> </h4>
+              <h4 style="text-align:left;"><a href="dtu.ac.in/" target="_blank" style="color:#12d640">Delhi Technological University</a><br> </h4>
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.Tech. in Electronics and Communication Engineering</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">August 2016 - July 2020</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
                 <!-- <li>Data Structures &amp; Algorithms</li> -->
                 <li>Operating Systems</li>
-                <!-- <li>Operating Systems</li> -->
                 <li>Microprocessors &amp; Interfacing</li>
                 <li>Control System</li>
                 <!-- <li>Computer Vision</li> -->
@@ -331,44 +330,43 @@
                 <ul style="text-align:left;">
                   <li>implementing baseline method and recreating the results</li>
                   <li>coming up with different ideas and implementing them to outperform the baseline and state-of-the art technique</li>
-                  <!-- <li>Handled Linux server administration and Apache configuration; automated tasks like user account creation, managing student database, and system maintenance using Shell and automation scripts, reducing manual work by 200%.</li> -->
-                </ul>
+                  </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://yatrimotorcycles.com/" style="color:#12d640">Yatri Motorcycles</a><br> </h4>
                 <h5 style="text-align:left;">June 2020 - July 2021</h5>
                 <p style="text-align:left;color:#fff"><em>Robotics & Hardware Engineer</em></p>
                 <ul style="text-align:left;">
-                  <!-- <li>Documented and coded server‑less web application for the hotel industry and designed REST API using Flask‑based JWT authentication.</li> -->
-                  <!-- <li>Redeveloped an existing system to support customer account management, scheduling, and time tracking; enabled dynamic API calls with the help of Amazon API Gateway, AWS Lambda, and DynamoDB.</li> -->
+                  <li>Documented and coded server less web application for the hotel industry and designed REST API using Flask‑based JWT authentication.</li>
+                  <li>Redeveloped an existing system to support customer account management, scheduling, and time tracking; enabled dynamic API calls with the help of Amazon API Gateway, AWS Lambda, and DynamoDB.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <!-- <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#12d640">Epitome Corporation Pvt. Ltd.</a><br> </h4> -->
-                <!-- <h5 style="text-align:left;">July 2019 - Dec 2019</h5> -->
-                <!-- <p style="text-align:left;color:#fff"><em>Software Developer</em></p> -->
+                <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#12d640">Epitome Corporation Pvt. Ltd.</a><br> </h4>
+                <h5 style="text-align:left;">July 2019 - Dec 2019</h5>
+                <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
                 <ul style="text-align:left;">
-                  <!-- <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the project.</li> -->
+                  <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the project.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <!-- <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4> -->
-                <!-- <h5 style="text-align:left;">May 2018 - June 2018</h5> -->
-                <!-- <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p> -->
+                <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4>
+                <h5 style="text-align:left;">May 2018 - June 2018</h5>
+                <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p>
                 <li>Optimized s. </li>
                 <ul style="text-align:left;">
                   <li>Devised ting speed by 46%.</li>
                   <li>Built a ve charts in real-time.</li>
-                  <!-- <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing pipeline, increasing overall speed by 75%.</li>
+                  <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing pipeline, increasing overall speed by 75%.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4> -->
+                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4>
                 <!-- <h5 style="text-align:left;">Jan 2018 - May 2018</h5> -->
                 <!-- <p style="text-align:left;color:#fff"><em>Research Intern</em></p> -->
                 <ul style="text-align:left;">
                   <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li>
-                  <!-- <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
+                  <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
                 </ul>
             </div>
           </div>
@@ -376,7 +374,7 @@
     </div>
   </section>
 
-  <! -- End Experience Section -->
+  <!-- End Experience Section -->
 
 
 
