trying to fix the page load

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-5BB8W2X');</script>
   <!-- End Google Tag Manager -->
-  <link rel="icon" type="image/png" href="/favicon.png"/>
+  <link rel="icon" type="image/png" href="/robotrobin.jpeg"/>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Portfolio</title>
+  <title>Robin's personal portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -41,15 +41,6 @@
 
     gtag('config', 'UA-169007209-3');
   </script>
-
-
-
-  <!-- =======================================================
-  * Template Name: Personal - v2.1.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -74,7 +65,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1EcK3IQOyV5IL15T0P0xnmtcrnlxmWrR4/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -82,9 +73,9 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="https://www.linkedin.com/in/robinvishen" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.github.com/vi7n" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:robinvishen@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
 
@@ -106,21 +97,20 @@
           <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
+          <p>Focused and enthusiastic robotics engineer with a keen interest in machine learning and artificial intelligence. 
+            I am passionate about quantifying uncertainity and predicting future events based on information we currently have.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 480-401-8112</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 17 September 1997</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 458-272-8647</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Tempe, AZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rajaprerak@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Corvallis, OR</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> robinvishen@gmail.com</li>
               </ul>
             </div>
           </div>
@@ -203,30 +193,29 @@
 
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets/img/education/ASU.jpg" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Computer Science</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">Janurary 2021 - Present</h5>
+              <img src="assets/img/education/OSU.jpg" class="img-fluid" alt="">
+              <h4 style="text-align:left;"><a href="https://oregonstate.edu/" target="_blank" style="color:#12d640">Oregon State University</a><br> </h4>
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Robotics</em></p>
+              <h5 style="text-align:left;padding: 0px 10px;">September 2022 - Present</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
-                <li>Distributed Database Systems</li>
-                <li>Cloud Computing</li>
-                <li>Foundation Of Algorithms</li>
+                <li>Machine Learning &amp; Data Mining</li>
+                <li>Multiagent Systems</li>
+                <li>Sequential Decision Making</li>
               </ul>
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets/img/education/au.png" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.Tech. in Information and Communication Technology</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">July 2014 - May 2018</h5>
-              <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
-              <ul style="text-align:left;color:#fff;">
-                <!-- <li>Data Structures &amp; Algorithms</li> -->
-                <li>Database Management Systems</li>
-                <!-- <li>Operating Systems</li> -->
-                <li>Algorithms &amp; Optimization for Big Data</li>
-                <li>Machine Learning</li>
-                <!-- <li>Computer Vision</li> -->
+                <img src="assets/img/education/dtu.png" class="img-fluid" alt="">
+                <h4 style="text-align:left;"><a href="dtu.ac.in/" target="_blank" style="color:#12d640">Delhi Technological University</a><br> </h4>
+                <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.Tech. in Electronics and Communication Engineering</em></p>
+                <h5 style="text-align:left;padding: 0px 10px;">August 2016 - July 2020</h5>
+                <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
+                <ul style="text-align:left;color:#fff;">
+                  <!-- <li>Data Structures &amp; Algorithms</li> -->
+                  <li>Operating Systems</li>
+                  <li>Microprocessors &amp; Interfacing</li>
+                  <li>Control System</li>
+                  <!-- <li>Computer Vision</li> -->
               </ul>
             </div>
           </div>
