--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Prerak Raja</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h1><a href="index.html">Robin Kumar Singh</a></h1>
+      <h2 style="color:#fff"><span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -686,7 +686,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "AI Enthusiast"],
+      strings: ["Programmer", "Robotics Engineer", "Developer", "AI Enthusiast"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
