--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Arizona State University</a><br> </h4>
+                <h4 style="text-align:left;"><a style="color:#12d640">Graduate Research Assistant (GRA)</a><br> </h4>
                 <h5 style="text-align:left;">January 2021 - Present</h5>
-                <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
+                <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p>
                 <ul style="text-align:left;">
                   <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx 5500 students.</li>
                   <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.</li>
