--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a style="color:#12d640">Graduate Research Assistant (GRA)</a><br> </h4>
                 <h5 style="text-align:left;"><a style="color:#12d640">Robotics Decision Making Laboratory (RDML)</a><br> </h5>
-                <h6 style="text-align:left;">December 2022 - Present</h6>
+                <h6 style="text-align:left;">December 202 - Present</h6>
                 <!-- <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p> -->
                 <ul style="text-align:left;">
                   <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx 5500 students.</li>
@@ -633,9 +633,9 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>1275 E University Dr</p>
-            <p>Unit 212</p>
-            <p>Tempe, AZ 85281</p>
+            <p>NW Taylor Avenue</p>
+            <p>Corvallis</p>
+            <p>Oregon</p>
           </div>
         </div>
 
@@ -644,9 +644,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.linkedin.com/in/robinvishen" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.github.com/vi7n" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="mailto:singhrob@oregonstate.edu" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
             </div>
           </div>
@@ -656,15 +656,15 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>rajaprerak@gmail.com</p>
-            <p>pkraja@asu.edu</p>
+            <p>robinvishen@gmail.com</p>
+            <p>singhrob@oregonstate.edu</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Contact</h3>
-            <p>+1 480-401-8112</p>
+            <p>+1 458-272-8657</p>
           </div>
         </div>
       </div>
