--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+          <img src="assets/img/profile.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic robotics engineer with a keen interest in machine learning and artificial intelligence. 
