trying to change icons

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-image-line" style="color: #ffc107;"></i>
+            <i class="ri:image-line" style="color: #ffc107;"></i>
             <h3>Deep Learning</h3>
           </div>
         </div>
