trying to change icons

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="bi-robot" style="color: #ffbb2c;"></i>
+            <i class="24-hours-line" style="color: #ffbb2c;"></i>
             <h3>Decision Making</h3>
           </div>
         </div>
