trying to change icons

--- a/index.html
+++ b/index.html
@@ -129,32 +129,32 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-git-merge-line" style="color: #ffbb2c;"></i>
+            <i class="ri-scales-3-line" style="color: #ffbb2c;"></i>
             <h3>Decision Making</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-database-2-line" style="color: #5578ff;"></i>
+            <i class="ri-robot-line" style="color: #5578ff;"></i>
             <h3>Robotics</h3>
             
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-camera-3-line" style="color: #e80368;"></i>
+            <i class="ri-tornado-fill" style="color: #e80368;"></i>
             <h3>Reinforcement Learning</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-english-input" style="color: #1c7d32;"></i>
+            <i class="ri-git-merge-line" style="color: #1c7d32;"></i>
             <h3>Software Automation</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
+            <i class="ri-stock-line" style="color: #28a745;"></i>
             <h3>Data Analysis & Visualization</h3>
           </div>
         </div>
