trying to change icons

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-scales-3-line" style="color: #ffbb2c;"></i>
+            <i class="ri-loop-right-line" style="color: #ffbb2c;"></i>
             <h3>Decision Making</h3>
           </div>
         </div>
@@ -154,7 +154,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-stock-line" style="color: #28a745;"></i>
+            <i class="ri-file-list-3-line" style="color: #28a745;"></i>
             <h3>Data Analysis & Visualization</h3>
           </div>
         </div>
@@ -166,13 +166,13 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #47aeff;"></i>
+            <i class="ri-stock-line" style="color: #47aeff;"></i>
             <h3>Finalncial Modeling</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-code-fill" style="color: #ffc107;"></i>
+            <i class="ri-tornado-fill" style="color: #ffc107;"></i>
             <h3>Deep Learning</h3>
           </div>
         </div>
