--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-loop-right-line" style="color: #ffbb2c;"></i>
+            <i class="ri-logout-circle-r-line" style="color: #ffbb2c;"></i>
             <h3>Decision Making</h3>
           </div>
         </div>
@@ -142,8 +142,8 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-tornado-fill" style="color: #e80368;"></i>
-            <h3>Reinforcement Learning</h3>
+            <i class="ri-code-fill" style="color: #e80368;"></i>
+            <h3>Machine Learning</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
