--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #28a745;"></i>
+            <i class="ri-bar-chart-box-line" style="color: #28a745;"></i>
             <h3>Data Analysis & Visualization</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
+            <i class="ri-file-list-3-line" style="color: #f1081f;"></i>
             <h3>Algorithms</h3>
           </div>
         </div>
