--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-tornado-fill" style="color: #ffc107;"></i>
-            <h3>Deep Learning</h3>
+            <h3>Multiagent Systems</h3>
           </div>
         </div>
       </div>
