--- a/index.html
+++ b/index.html
@@ -234,11 +234,12 @@
 
          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/umich.jpeg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Machine Learning</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                
+                <a href="https://coursera.org/share/d2b2888168999a1bbe51c0f7f3bea87b" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
            </div>
