--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/certification/umich.jpeg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Machine Learning</h4>
+              <h4>Getting Started with Python</h4>
               <div class="portfolio-links">
                 
                 <a href="https://coursera.org/share/d2b2888168999a1bbe51c0f7f3bea87b" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
@@ -247,11 +247,11 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/umich.jpeg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Algorithms-Design and Analysis</h4>
+              <h4>Python Data Structures</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/6THRQXYE9EHZ?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/4110e61d687c5cdaf48f0911d2f3fc03" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
