--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
 
          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/umich.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/certification/ucsd.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Getting Started with Python</h4>
+              <h4>Algorithmic Toolbox</h4>
               <div class="portfolio-links">
                 
-                <a href="https://coursera.org/share/d2b2888168999a1bbe51c0f7f3bea87b" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/3083d2202eea1f9d3d4cd0384c8a8fa0" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
            </div>
@@ -247,11 +247,11 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/umich.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/certification/ucsd.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Python Data Structures</h4>
+              <h4>Data Structures</h4>
               <div class="portfolio-links">
-                <a href="https://coursera.org/share/4110e61d687c5cdaf48f0911d2f3fc03" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/4ea6eab9f80285aa48a5e704fc18ffe5" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -259,16 +259,16 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 740px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/ucsd.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/uci.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Algorithmic Toolbox</h4>
+              <h4>Internet of Things and Embedded Systems</h4>
               <div class="portfolio-links">
-                <a href="https://coursera.org/share/98bbfb990484fac370d5e5ed14334ea4" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/share/1712a4bf919e5777f642ec890df85a47" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
-
+<!-- 
         <div class="col-lg-4 col-md-6 portfolio-item filter-project" style="position: absolute; left: 0px; top: 218.875px;">
           <div class="portfolio-wrap">
             <img src="assets/img/certification/ibm.jpg" class="img-fluid" alt="">
@@ -304,7 +304,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
