--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a style="color:#12d640">Graduate Research Assistant (GRA)</a><br> </h4>
                 <h5 style="text-align:left;"><a style="color:#12d640">Robotics Decision Making Laboratory (RDML)</a><br> </h5>
-                <h6 style="text-align:left;">December 202 - Present</h6>
-                <!-- <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p> -->
+                <h6 style="text-align:left;">December 2022 - Present</h6>
+                <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p>
                 <ul style="text-align:left;">
                   <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx 5500 students.</li>
                   <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.</li>
