--- a/index.html
+++ b/index.html
@@ -325,14 +325,16 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a style="color:#12d640">Graduate Research Assistant (GRA)</a><br> </h4>
-                <h5 style="text-align:left;"><a style="color:#23f554">Robotics Decision Making Laboratory (RDML)</a><br> </h5>
+                <h4 style="text-align:left;"><a style="color:#12d640">Robotics Decision Making Laboratory (RDML)</a><br> </h4>
+                <h5 style="text-align:left;"><a style="color:#23f554">Graduate Research Assistant (GRA)</a><br> </h5>
+                <li>how will this look on website I wonder</li>
                 <h6 style="text-align:left;">December 2022 - Present</h6>
                 <!-- <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p> -->
                 <ul style="text-align:left;">
-                  <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx 5500 students.</li>
-                  <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.</li>
-                  <li>Handled Linux server administration and Apache configuration; automated tasks like user account creation, managing student database, and system maintenance using Shell and automation scripts, reducing manual work by 200%.</li>
+                  <li>Elaborate review of pre-existing and state-of-art grasping algorithm.</li>
+                  <li>Implemented Baseline grasping method and modified it to be used for underwater scenarios.</li>
+                  <li>Developing a novel dynamic grasping in unstructured environment.</li>
+                  <!-- <li>.</li> -->
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
