changes to hit page tags

--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Programmer", "Robotics Engineer", "Developer", "AI Enthusiast"],
+      strings: ["Programmer", "Robotics Researcher", "Software Developer", "AI Enthusiast", "Control System Engineer"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
